fix: tab overflow (#33)
* fix: tab promote size

* fix: tab-overflow

* fix: delete useless code

--- a/src/components/layouts/BasicLayout/Header/index.module.less
+++ b/src/components/layouts/BasicLayout/Header/index.module.less
@@ -9,7 +9,6 @@
   z-index: 250;
   transition: transform 0.2s;
 
-
   .wrapper {
     margin: auto;
     max-width: 1440px;
@@ -121,6 +120,15 @@
   &::before {
     display: none;
   }
+}
+.tab-more {
+  line-height: 5rem;
+  font-size: 1.25rem;
+  height: 100%;
+  height: 5rem;
+  color: var(--juejin-text-1);
+  cursor: pointer;
+  position: relative;
 }
 .tab-first {
   line-height: 5rem;
